--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-pdf": "^7.7.0"
   },
   "devDependencies": {
