--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.16.5",
+    "multer": "^2.0.2",
     "next": "^14.2.3",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
