--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/megheza
+MONGO_URI=mongodb+srv://mahantaatlanta:0gNl5I80rl0vwQeF@cluster0.po3ww9z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
