--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.1",
+    "lottie-react": "^2.4.1",
     "mongoose": "^8.16.5",
     "multer": "^2.0.2",
     "next": "^14.2.3",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-pdf": "^7.7.0",
     "sanitize-html": "^2.17.0"
   },
